# reducto

./: .gitignore  CMakeLists.txt  README.md  README.txt  VERSION.txt  build.sh  install  installSAT.sh  makefile
include/: AF.h  Actives.h  Decodings.h  Decodings_cms.h  Encodings.h  Encodings_cms.h  ExtensionSolver.h  ExternalSolver.h  InitialSetSolver.h  LinkedSparseMatrix.h  List.h  ListActives.h  Main.h  Matrix.h  Parser_iccma.h  Reduct.h  SatProblem.h  ScepticalPRCheck.h  ScepticalPRParallel.h  ScepticalPRSequential.h  Solver.h  ipafair.h
include/logic/: AF.h  Actives.h  ConeOfInfluence.h  Decoding.h  Decodings.h  Decodings_SatSolver.h  Encoding.h  Encodings.h  Encodings_SatSolver.h  Enums.h  ExtensionPrioritised.h  ExtensionSolver.h  Heuristic1.h  Heuristic2.h  Heuristic3.h  Heuristic4.h  Heuristic5.h  HeuristicDummy.h  IPrioHeuristic.h  IPrioritizer.h  InitialSetSolver.h  ListActives.h  Parser_iccma.h  PreProcessor.h  PreProcessor_DS_PR.h  PreProcessor_GR.h  PreProcessor_GR_parallel.h  Prioritizer.h  PriorityQueueManager.h  PriorityStackManager.h  Processor_DS_PR.h  Reduct.h  SatProblem.h  SatSolver.h  SatSolverCadical.h  SatSolverCrypto.h  SatSolverGlucose.h  SatSolver_cadical.h  SatSolver_cms.h  ScepticalCheck.h  (+13 more)
include/util/: Array.h  ArrayBitSet.h  Enums.h  List.h  MemoryWatchDog.h  Printer.h  ToolList.h  ToolsList.h  Tools_omp.h  VectorBitSet.h
lib/cadical/: makefile
lib/pstreams-1.0.3/: CMakeLists.txt
rsc/examples/: example1.i23  example2
src/: AF.c  Actives.c  Array.c  Decodings.c  Decodings_cms.cpp  Encodings.c  Encodings_cms.cpp  ExtensionSolver.cpp  ExternalSolver.cpp  ExternalSolver_cms.cpp  ExternalSolver_pstreams.cpp  InitialSetSolver.cpp  LinkedSparseMatrix.c  List.c  ListActives.c  Main.cpp  Matrix.c  Parser_iccma.cpp  Reduct.c  SatProblem.c  ScepticalPRCheck.c  ScepticalPRParallel.cpp  ScepticalPRSequential.cpp  Solver.cpp  Solver.h
src/logic/: AF.c  AF.cpp  Actives.c  Actives.cpp  ConeOfInfluence.cpp  Decoding.cpp  Decodings.c  Decodings.cpp  Decodings_SatSolver.cpp  Decodings_cms.cpp  Encoding.cpp  Encodings.c  Encodings.cpp  Encodings_SatSolver.cpp  Encodings_cms.cpp  Enums.cpp  ExtensionPrioritised.cpp  ExtensionSolver.cpp  ExternalSolver_pstreams.cpp  Heuristic1.cpp  Heuristic2.cpp  Heuristic3.cpp  Heuristic4.cpp  Heuristic5.cpp  HeuristicDummy.cpp  InitialSetSolver.cpp  ListActives.c  Parser_iccma.cpp  PreProcessor.cpp  PreProcessor_DS_PR.cpp  PreProcessor_GR.cpp  PreProcessor_GR_parallel.cpp  Prioritizer.cpp  PriorityQueueManager.cpp  PriorityStackManager.cpp  Processor_DS_PR.cpp  Reduct.c  Reduct.cpp  SatProblem.c  SatSolver.cpp  (+19 more)
src/util/: Array.c  Enums.cpp  LinkedSparseMatrix.c  List.c  Matrix.c  MemoryWatchDog.c  Printer.cpp  ToolList.cpp  ToolsList.cpp  Tools_omp.cpp
unitTests/: StartAllTests.cpp  unitTests.vcxproj
unitTests/util/: Array_tests.cpp
